--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <script src="p5.sound.min.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8">
+    <title>Looping Shape Cereal</title>
 
   </head>
   <body>
     <p class="invisible">You have found the invisible hidden treasure. Keep digging! Due to fear, one of the inhabitants excreted a pixel, grass, and antifreeze-filled sheet from a small tail. It also featured the nine things it had consumed recently: word salad, polygon pastries, never-ending pasta, an extra dark, large form, ocean sprinkles, zigzags in circle sauce, sound-filled cement buns, a nested skeleton. </p>
     <script src="sketch.js"></script>
-  
+
 
 </body></html>
